--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -282,7 +282,7 @@ h1,h2,h3,h4,h5,h6{
                                                     <span class="price">
                                                         <span class="woocommerce-Price-amount amount"><span class="woocommerce-Price-currencySymbol" class="gothic">Rwf </span>{{product.price|intcomma}}</span>
                                                     </span><br>
-                                                    <button class="gothic" data-product="{{product.id}}" data-stock="{{product.inStock}}" data-action="add" class="single_add_to_cart_button button alt update-cart">
+                                                    <button data-product="{{product.id}}" data-stock="{{product.inStock}}" data-action="add" class="single_add_to_cart_button button alt update-cart gothic">
                                                         Add to cart
                                                     </button>
                                                 </div>
