--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -27,7 +27,10 @@
 	<link rel='stylesheet' href="{% static "web/css/global.css" %}">
 	<link rel='stylesheet' href="{% static "web/css/structure.css" %}">
 	<link rel='stylesheet' href="{% static "web/css/scooterrental.css"%}">
-	<link rel='stylesheet' href="{% static "web/css/custom.css" %}"> </head>
+	<link rel='stylesheet' href="{% static "web/css/custom.css" %}"> 
+	<link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
+
+</head>
 	<style>
 	.gothic{
 		font-family:century-gothic
@@ -43,7 +46,7 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" title="BeScooterRental - Betheme" data-height="60" data-padding="30"><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="50" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:40px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
@@ -146,9 +149,9 @@
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
 										<h5>
-										<li class="gothic">bacteria contamination of the water.</li>
-										<li class="gothic">black-ish color to the water</li>
-										<li class="gothic">water that smells bad even after boiling</li>
+										<li class="gothic" style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp Bacteria contamination of the water.</li>
+										<li class="gothic" style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp Black-ish color to the water</li>
+										<li class="gothic" style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp Water that smells bad even after boiling</li>
 										</h5>
 
 										</div>
@@ -237,9 +240,9 @@
 												<h2><span class="themecolor gothic">Safety, Comfortable and Impact<span></h2>
 												<h4 class="gothic">With the full Amazi System:</h4>
 												<h5 class="gothic">
-												<li>your family enjoys clean safe water throughout the house.</li>
-												<li>Your rain season water bill reduces (RAINWATER IS FREE WATER)</li>
-												<li>You participate in protecting our environment.</li>
+												<li style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp Your family enjoys clean safe water throughout the house.</li>
+												<li style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp Your rain season water bill reduces (RAINWATER IS FREE WATER)</li>
+												<li style="list-style-type: none;"><i class="fa fa-arrow-circle-right"></i>&nbsp&nbsp&nbsp You participate in protecting our environment.</li>
 												</h5>
 												<hr class="no_line" style="margin:0 auto 10px">
 												
@@ -362,9 +365,9 @@
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d" class="gothic">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x" style="color:#00ACEE"></i> Twitter</a> </p>
-									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x" style="color:#4267B2"></i>  Facebook</a> </p>
-									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>  Instagram</a> </p>
+									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x"></i>&nbsp&nbsp&nbsp Twitter</a> </p>
+									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x"></i>&nbsp&nbsp&nbsp Facebook</a> </p>
+									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>&nbsp&nbsp&nbsp Instagram</a> </p>
 								</div>
 							</div>
 						</aside>
