--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Access Rwanda</title>
+    <title>Amazi.rw</title>
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
 	<link rel='stylesheet' href="{% static "web/css/global.css"%}">
     <link rel='stylesheet' href="{% static "web/css/structure.css"%}">
