--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Water Access Rwanda</title>
+	<title>Amazi.rw</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
@@ -264,11 +264,11 @@
 						<div class="column_attr clearfix align_center" >
 								<h2><span class="themecolor gothic">
 								BEFORE AND AFTER</span> </h2><br>
-								<h5 class="gothic">we conducted a pilot to see what our system would achieve for our users. Here is what happened and what you can expect.</h5>
+								<h5 class="gothic">we conducted a pilot to see what our system would achieve for our users.<br> Here is what happened and what you can expect.</h5>
 												<hr class="no_line" style="margin:0 auto 20px">
 						</div>
 						<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-zk9pzc9s5 one valign-top move-up clearfix" style="margin-top:--120px" data-mobile="no-up">
+								<div class="wrap mcb-wrap mcb-wrap-zk9pzc9s5 one valign-top move-up clearfix" style="margin-top:30px" data-mobile="no-up">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact">
 											<div class="quick_fact align_ animate-math">
@@ -313,7 +313,7 @@
 								</div>
 							</div>
 
-							<div style="margin-left:15%" >
+							<div style="margin-left:15%;margin-top:30px" >
 							<iframe width="921" height="520" src="https://www.youtube.com/embed/dT-j7h6Ur-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						
