--- a/users/templates/CustomerBoard.html
+++ b/users/templates/CustomerBoard.html
@@ -16,7 +16,7 @@
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Access Rwanda</title>
+    <title>Amazi.rw</title>
 
 
     <!--STYLESHEET-->
