--- a/users/templates/website/blog.html
+++ b/users/templates/website/blog.html
@@ -12,7 +12,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
-	<title>Water Access Rwanda</title>
+	<title>Amazi.rw</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
