--- a/users/templates/website/post.html
+++ b/users/templates/website/post.html
@@ -13,7 +13,7 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Water Access Rwanda</title>
+    <title>Amazi.rw</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
