--- a/users/templates/website/product_page.html
+++ b/users/templates/website/product_page.html
@@ -14,7 +14,7 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Water Access Rwanda</title>
+    <title>Amazi.rw</title>
     <meta name="description" content="Water Access">
     <meta name="author" content="Water Access">
 
