--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -66,7 +66,7 @@
 						<div class="column one">
 							<div class="top_bar_left clearfix">
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:40px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:35px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
 								</div>
 								<div class="menu_wrapper">
 									<nav id="menu">
@@ -96,10 +96,10 @@
 								<div class="wrap mcb-wrap mcb-wrap-8xzuvctmv one valign-top clearfix" >
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-284je0ofj one column_slider_plugin">
-											<div class="mfn-main-slider mfn-rev-slider">
+											<div class="mfn-main-slider mfn-rev-slider" style="height:100px">
 
-												<div class="wrap mcb-wrap mcb-wrap-2/3 one-second valign-top clearfix" style="padding:0 3%">
-													<div style="height: 500px;width: 550px;background:black;border-top-left-radius:100px;border-top-right-radius:30px;border-bottom-right-radius:100px;border-bottom-left-radius:30px ;font-family:Poppins;color:white;text-align:center;font-size:40px;font-weight:bold;padding-top:100px" >
+												<div class="wrap mcb-wrap mcb-wrap-2/3 one-second valign-top clearfix">
+													<div style="height: 400px;width: 500px;background:black;border-top-left-radius:150px;border-top-right-radius:0px;border-bottom-right-radius:0px;border-bottom-left-radius:0px ;color:white;text-align:center;font-size:40px;font-weight:bold;padding-top:100px" >
 													<span class="gothic">Rain</span><span style="color:#00b4e3" class="gothic">Water</span>
 														<br><br>
 														is Safe  Water
@@ -268,7 +268,9 @@
 			</div>
 		</div>
 
-		     <h2 class="themecolor gothic" style="text-align: center;padding-bottom:30px;">OUR PARTNER</h2>
+		<div style="background-color:#fafafa">
+
+		     <h2 class="themecolor gothic" style="text-align: center;padding-bottom:50px;background-color:#fafafa">OUR PARTNER</h2>
 		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:30px;padding-left:200px;">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" >
@@ -292,6 +294,7 @@
 							</div>
 						
 			</div>
+		</div>
 
 							<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:10px;padding-bottom:20px">
 							<div class="section_wrapper mcb-section-inner">
