--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -73,14 +73,13 @@
 					<div class="entry-content">
 						<div class="section mcb-section mcb-section-19e2801bd full-width" style="padding-left:5%;padding-right:5%">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-f71662337 one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url(  {% static "web/images/scooterrental-section-bg1.png" %} );background-repeat:no-repeat;background-position:left center">
+								<div class="wrap mcb-wrap mcb-wrap-f71662337 one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#1f1f1f;background-image:url(  {% static "web/images/scooterrental-section-bg1.png" %} );background-repeat:no-repeat;background-position:left center">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-a0e4df973 one-sixth column_placeholder">
 											<div class="placeholder"> &nbsp; </div>
 										</div>
 										<div class="column mcb-column mcb-item-75ad2287a two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;" class="gothic"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>AMAZI</h6>
 												<hr class="no_line" style="margin:0 auto 20px">
 												<h1 style="color:#FFF;"><span class="themecolor gothic">RainWater is safe water</span>
 													</h1>
@@ -96,7 +95,7 @@
 						
 
 
-						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:10px;padding-bottom:20px">
+						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:30px;padding-bottom:20px">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-2a27884ed one-second valign-middle clearfix">
 									<div class="mcb-wrap-inner">
