--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -374,6 +374,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="footer_copy" style="margin-top:-100px">
+				<div>
+					<div class="column one">
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
+				</div>
+			</div>
 			<div class="footer_copy">
 				<div class="container">
 					<div class="column one">
