--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -139,8 +139,8 @@
 						<div class="section_wrapper mcb-section-inner" style="margin-top:30px">
 								<div class="wrap mcb-wrap mcb-wrap-zk9pzc9s5 one valign-top move-up clearfix" style="margin-top:--120px" data-mobile="no-up">
 									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+										<div class="column mcb-column mcb-item-qyuetn73g one-fourth column_quick_fact" >
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 											<div><img class="scale-with-grid" src="{% static "web/images/money.png" %}" style="width:35px;height:35px"></div>
 											<h4><b class="themecolor">Save Money</b> </h4>												
 											<h5 class="gothic" style="text-align: center;">ALL HOUSEHOLDS reduced their water bill by 58% One family went from RWF 25,000 to Just RWF 6,000!.</h5>
@@ -149,7 +149,7 @@
 											</div>
 										</div>
 										<div class="column mcb-column mcb-item-z73733ieu one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 												<div><img class="scale-with-grid" src="{% static "web/images/maledrink.png" %}" style="width:35px;height:35px"> </div>
 											   <h4><b class="themecolor gothic" >Trust your water tap</b> </h4>
 												<h5 class="gothic" style="text-align: center;">Savings: 100% of all households were buying their drinking water, after our system 63% had switched to drinking from their taps.</h5>
@@ -158,7 +158,7 @@
 											</div> 
 										</div>
 										<div class="column mcb-column mcb-item-5fltm4adk one-fourth column_quick_fact">
-											<div class="quick_fact align_ animate-math">
+											<div class="quick_fact align_ animate-math" style="margin-right:30px">
 												<div><img class="scale-with-grid" src="{% static "web/images/glass.png" %}" style="width:35px;height:35px"> </div>
 											   <h4><b class="themecolor gothic">Safe and Clean for Drinking</b> </h4> </div>
 												<h5 class="gothic" style="text-align: center;">Before no one trusted drinking rainwater, this number increased to 87% drinking directly from their taps.</h5>
@@ -376,10 +376,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer_copy">
+			<div class="footer_copy" style="margin-top:-100px">
 				<div>
 					<div class="column one">
-						<img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="50" alt="scooterrental" data-no-retina>					</div>
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
 				</div>
 			</div>
 			<div class="footer_copy">
