--- a/users/templates/website/blog.html
+++ b/users/templates/website/blog.html
@@ -73,29 +73,10 @@
 			<div class="content_wrapper clearfix">
 				<div class="sections_group">
 					<div class="entry-content">
-						<div class="section mcb-section mcb-section-jhjgar3sg full-width" style="padding-left:5%;padding-right:5%">
-							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-418y1xrbc one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url({% static "web/images/scooterrental-section-bg1.png" %});background-repeat:no-repeat;background-position:left center">
-									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-k4ycezxt1 one-sixth column_placeholder">
-											<div class="placeholder"> &nbsp; </div>
-										</div>
-										<div class="column mcb-column mcb-item-xhgolw32g two-third column_column">
-											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span class="gothic" style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>water access</h6>
-												<hr class="no_line" style="margin:0 auto 20px">
-												<h1 style="color:#FFF;">
-													<span class="themecolor gothic">Blog</span></h1>
-												<hr class="no_line" style="margin:0 auto 20px">
-												 </div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						
 
 
-<br><br><br>
+<br>
 
 
 
@@ -244,6 +225,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="footer_copy" style="margin-top:-100px">
+				<div>
+					<div class="column one">
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
+				</div>
+			</div>
+			
 			<div class="footer_copy">
 				<div class="container">
 					<div class="column one">
