--- a/users/templates/website/contact.html
+++ b/users/templates/website/contact.html
@@ -73,19 +73,14 @@
 					<div class="entry-content">
 						<div class="section mcb-section mcb-section-0c680f8ea full-width" style="padding-bottom:120px;padding-left:5%;padding-right:5%">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-d5d07472b one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#000;background-image:url({% static "web/images/scooterrental-section-bg1.png" %});background-repeat:no-repeat;background-position:left center">
+								<div class="wrap mcb-wrap mcb-wrap-d5d07472b one scooterrental-wrap-radius2 valign-top clearfix" style="padding:120px 10% 70px;background-color:#1f1f1f;background-image:url({% static "web/images/scooterrental-section-bg1.png" %});background-repeat:no-repeat;background-position:left center">
 									<div class="mcb-wrap-inner">
 										<div class="column mcb-column mcb-item-04c5d7bfe one-sixth column_placeholder">
 											<div class="placeholder"> &nbsp; </div>
 										</div>
 										<div class="column mcb-column mcb-item-846a89027 two-third column_column">
 											<div class="column_attr clearfix align_center" style>
-												<h6 style="color:#FFF;"><span style="font-size:18px;color:#00b4e3;margin-right:10px;">●</span>CONTACT</h6>
-												<hr class="no_line" style="margin:0 auto 20px">
-												<h1 style="color:#FFF;" class="gothic">Feel<span class="themecolor"> free </span>to
-													<br>
-													<span class="themecolor gothic">contact</span> with us</h1>
-												<hr class="no_line" style="margin:0 auto 20px">
+												<h2 style="color:#FFF;"><span style="font-size:38px;color:#00b4e3;margin-right:10px;">●</span>CONTACT US</h2>
 												 </div>
 										</div>
 										<div class="column mcb-column mcb-item-8hk6k0yi6 one column_divider">
@@ -101,8 +96,8 @@
 													<br>
 													Kigali, Nyarugenge
 													</h4>
-												<h4 style="color:#FFF;" class="gothic"><i class="fa fa-phone"></i>+250 788 888 888</h4>
-												<h4 style="color:#FFF;" class="gothic"><i class="fa fa-envelope"></i><a href="#" style="color:white" >info@warwanda.com</a></h4> </div>
+												<h4 style="color:#FFF;" class="gothic"><i class="fa fa-phone"></i> &nbsp&nbsp +250 788 888 888</h4>
+												<h4 style="color:#FFF;" class="gothic"><i class="fa fa-envelope"></i><a href="#" style="color:white" >&nbsp&nbsp info@warwanda.com</a></h4> </div>
 										</div>
 										<div class="column mcb-column mcb-item-lw0uwepr5 one-third column_column">
 											<div class="column_attr clearfix align_center" style="background-color:#fff;padding:40px 10% 25px;border-radius: 20px; box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.1);">
