--- a/users/templates/website/ijabo.html
+++ b/users/templates/website/ijabo.html
@@ -95,7 +95,7 @@
 						
 
 
-						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:30px;padding-bottom:20px">
+						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:50px;padding-bottom:20px">
 							<div class="section_wrapper mcb-section-inner">
 								<div class="wrap mcb-wrap mcb-wrap-2a27884ed one-second valign-middle clearfix">
 									<div class="mcb-wrap-inner">
@@ -204,23 +204,22 @@
 
 						<div class="column_attr clearfix align_center" >
 								<h2><span class="themecolor gothic">
-								Add A Full House Filter for</span> </h2>
-								<br>
-								<h2><span class="themecolor gothic">
+								Add A Full House Filter for</span><br>
+								<span class="themecolor gothic">
 								Maximum Safety.</span> </h2>
 								<br>
 								<h5 class='gothic'>Complete the filter selection form and we will help you <br> choose the most appropriate for your family. </h5>
-								<div class="text-center">
+								<div class="text-center" >
 												<a href="https://formlink.mwater.co/#/6b5afb681e704eb8b8d070f517dcca85/7089548723194811b47695b5bceaaf35?branding=mwater" target="blank">
 												<button style="background-color:white;color:#009cde;border:1px solid #009cde">Filter Selection Form</button>
 												</a>
-												</div>
+								</div>
 						</div>
 
 
 
 
-						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:10px;padding-bottom:20px">
+						<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-top:50px;padding-bottom:50px">
 							<div class="section_wrapper mcb-section-inner">
 							<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding:0 5%">
 									<div class="mcb-wrap-inner">
@@ -315,7 +314,7 @@
 								</div>
 							</div>
 
-							<div style="margin-left:15%;margin-top:30px" >
+							<div class="column mcb-column mcb-item-hfbzurgtu one-one column_quick_fact" style="margin-left:15%;margin-top:30px" >
 							<iframe width="921" height="520" src="https://www.youtube.com/embed/dT-j7h6Ur-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						
