--- a/users/templates/website/checkout.html
+++ b/users/templates/website/checkout.html
@@ -136,7 +136,7 @@ h1,h2,h3,h4,h5,h6{
 						<div class="column one">
 							<div class="top_bar_left clearfix"  >
 								<div class="logo">
-									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:35px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
+									<a id="logo" href="{% url 'index' %}" ><img class="logo-main scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}"  data-no-retina style="height:55px;width:150px;padding-bottom:25px;"><img class="logo-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}" data-retina="{% static "web/images/scooterrental.png" %}" data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile scale-with-grid" src="{% static "web/images/scooterrental.png"%}"  data-height="30" alt="scooterrental" data-no-retina><img class="logo-mobile-sticky scale-with-grid" src="{% static "web/images/scooterrental.png" %}"  data-height="30" alt="scooterrental" data-no-retina></a>
 								</div>
                                 
 								<div class="menu_wrapper">
@@ -273,7 +273,7 @@ h1,h2,h3,h4,h5,h6{
 				<div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
 					<div style="flex:2"><pclass="gothic">{{item.product.name}}</pclass=></div>
-					<div style="flex:1"><pclass="gothic">{{item.product.price}} Rwf</pclass=></div>
+					<div style="flex:1"><pclass="gothic">{{item.product.price|intcomma}} Rwf</pclass=></div>
 					<div style="flex:1"><pclass="gothic">x{{item.quantity}}</pclass=></div>
 				</div>
 				{% endfor %}
