--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -270,21 +270,21 @@
 
 		<div style="background-color:#fafafa">
 
-		     <h2 class="themecolor gothic" style="text-align: center;padding-bottom:50px;background-color:#fafafa">OUR PARTNER</h2>
+		     <h2 class="themecolor gothic column one" style="text-align: center;padding-bottom:50px;background-color:#fafafa">OUR PARTNER</h2>
 		<div class="section mcb-section mcb-section-9e98f0fdc equal-height-wrap" style="padding-bottom:30px;padding-left:200px;">
 							<div class="section_wrapper mcb-section-inner">
-								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" >
+								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 column one-second valign-middle clearfix" >
 									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
+										<div class="column mcb-column mcb-item-b6e2ae677 one-second column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
 												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/partner1.webp" %}" alt="scooterrental-how-pic1"  > </div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448 one-second valign-middle clearfix" style="padding-right:200px;">
+								<div class="wrap mcb-wrap mcb-wrap-0e4f0a448  column one-second valign-middle clearfix" style="padding-right:200px;">
 									<div class="mcb-wrap-inner">
-										<div class="column mcb-column mcb-item-b6e2ae677 one column_image">
+										<div class="column mcb-column mcb-item-b6e2ae677 one-second column_image">
 											<div class="image_frame image_item no_link scale-with-grid no_border">
 												<div class="image_wrapper"><img class="scale-with-grid" src="{% static "web/images/partner2.webp" %}" alt="scooterrental-how-pic1" > </div>
 											</div>
@@ -369,7 +369,7 @@
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
 									<h6 style="color:#7d7d7d" class="gothic">MORE INFO</h6>
-									<hr class="no_line" style="margin:0 auto 20px">
+									<hr class="no_line" style="margin:0 auto 10px">
 									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x"></i>&nbsp&nbsp&nbsp Twitter</a> </p>
 									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x"></i>&nbsp&nbsp&nbsp Facebook</a> </p>
 									<p class="gothic"><a href="https://www.instagram.com/amazirw/" style="margin-left:20px;"><i class="fa fa-instagram fa-2x"></i>&nbsp&nbsp&nbsp Instagram</a> </p>
@@ -379,10 +379,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer_copy" style="margin-top:-100px">
+			<div class="footer_copy" style="margin-top:-200px">
 				<div>
 					<div class="column one">
-						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					</div>
 				</div>
 			</div>
 			<div class="footer_copy">
