--- a/users/templates/website/post.html
+++ b/users/templates/website/post.html
@@ -171,8 +171,8 @@
 										<br>
 										 
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
@@ -194,14 +194,12 @@
 					</div>
 				</div>
 			</div>
-            {% comment %} <div class="footer_copy center" style="margin-top:-100px">
-				<div>
+          	<div  style="margin-top:-100px;margin-left:37%">
 					<div class="column one">
-						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw" data-no-retina>					</div>
-				</div>
-			</div> {% endcomment %}
-			<div class="footer_copy center">
-				<div class="container">
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					
+                    </div>
+			</div>
+			<div class="footer_copy" style="margin-left:40%">
 					<div class="column one">
 						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 					</div>
