--- a/users/templates/website/index.html
+++ b/users/templates/website/index.html
@@ -109,8 +109,8 @@
 														 <br>
 														 <br>
 
-													<div style="display:inline-block;height:48px;width:170px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic2.png' %})"></div>
-													<div style="display:inline-block;height:48px;width:190px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic3.png' %})"></div>
+													<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><div style="display:inline-block;height:48px;width:170px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic2.png' %})"></div></a>
+													<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><div style="display:inline-block;height:48px;width:190px;margin-top:100px;background-image:url({% static 'web/images/scooterrental-slider-pic3.png' %})"></div></a>
 													</div>
 												</div>
 
@@ -356,8 +356,8 @@
 									<h3 class="gothic">Rainwater is safe water
 										<br>
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p> <a href="{% url 'contact_us' %}" class="gothic">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
