--- a/users/templates/website/shop.html
+++ b/users/templates/website/shop.html
@@ -313,7 +313,7 @@ h1,h2,h3,h4,h5,h6{
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 class="gothic" style="color:#7d7d7d">QUICK LINKS</h6>
+									<h6 style="color:#7d7d7d" class="gothic">QUICK LINKS</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									{% comment %} <p> <a href="{% url 'about' %}"> About us</a> </p> {% endcomment %}
 									<p class="gothic"> <a href="https://www.warwanda.com/">Service</a> </p>
@@ -331,8 +331,8 @@ h1,h2,h3,h4,h5,h6{
 										<br>
 										 
 									<hr class="no_line" style="margin:0 auto 20px">
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
-									<a href="#"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
+									<a href="https://apps.apple.com/us/app/water-access-rwanda/id1595451679" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn1.png" %}"></a>
+									<a href="https://play.google.com/store/apps/details?id=water.access.rwanda" target="_blank"><img src="{% static "web/images/scooterrental-footer-btn2.png" %}"></a>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p class="gothic"> <a href="{% url 'contact_us' %}">CONTACT US <i class="icon-right-thin" style="color:#00b4e3"></i></a> </p>
 									<hr class="no_line" style="margin:0 auto 80px"> </div>
@@ -343,7 +343,7 @@ h1,h2,h3,h4,h5,h6{
 						<aside class="widget_text widget widget_custom_html">
 							<div class="textwidget custom-html-widget">
 								<div style="text-align: center;">
-									<h6 class="gothic" style="color:#7d7d7d">MORE INFO</h6>
+									<h6 style="color:#7d7d7d">MORE INFO</h6>
 									<hr class="no_line" style="margin:0 auto 20px">
 									<p class="gothic"><a href="https://twitter.com/amazirw" style="margin-left:1px;"><i class="fa fa-twitter-square fa-2x"></i>&nbsp&nbsp&nbsp Twitter</a> </p>
 									<p class="gothic"><a href="https://web.facebook.com/amazirw?_rdc=1&_rdr" style="margin-left:20px;"><i class="fa fa-facebook-official fa-2x"></i>&nbsp&nbsp&nbsp Facebook</a> </p>
@@ -354,8 +354,12 @@ h1,h2,h3,h4,h5,h6{
 					</div>
 				</div>
 			</div>
-			<div class="footer_copy">
-				<div class="container">
+          	<div  style="margin-top:-100px;margin-left:37%">
+					<div class="column one">
+						<img width='30%' src="{% static "web/images/scooterrental.png" %}"  alt="Amazi.rw">					
+                    </div>
+			</div>
+			<div class="footer_copy" style="margin-left:40%">
 					<div class="column one">
 						<div class="copyright"> &copy; <script>document.write(new Date().getFullYear());</script> Water Access Rwanda </div>
 					</div>
